# GLiREL

./: .gitignore  Makefile  README.md  RELEASE.md  config_combine_few_rel_wiki_zsl.yaml  config_few_rel.yaml  config_few_rel_focal.yaml  config_wiki_zsl.yaml  config_wiki_zsl_focal.yaml  config_zero_rel.yaml  demo.ipynb  demo_spacy.ipynb  eval.py  eval_with_gpt.py  pyproject.toml  quickstart.py  quickstart_demo.ipynb  quickstart_demo_spacy.ipynb  requirements-dev.txt  requirements.txt  train.ipynb  train.py  visualise.ipynb  zero_rel.ipynb
configs/: config_docred.yaml  config_few_rel.yaml  config_finetuning.yaml  config_nyt.yaml  config_redocred.yaml  config_wiki_zsl.yaml  config_zero_rel.yaml
data/: all_wikidata_properties.json  analyse_labels.ipynb  docred_expanded.jsonl  evaluation_official_docred.py  few_rel_eval.jsonl  few_rel_train.jsonl  filter_labels.ipynb  pid2name_fewrel.json  pid2name_wiki.json  process_docred.py  process_few_rel.py  process_few_rel_2.0.py  process_nyt.py  process_redocred.py  process_wiki_zsl.py  process_zero_rel.py  sample.jsonl
data/dataset-generation/: 1_spacy_annotation.py  2_vllm_data_gen.py  prototype_datagen_with_distilabel.ipynb  prototype_dataset_generation.ipynb
data/docred/: docred_evaluation.py  evaluation_official_docred.py
data/nyt/: relations2id.json
data/re-docred/: evaluation.py  official_eval.py  (+2 more)
examples/: experimentation_notebook.ipynb  finetune.ipynb  quickstart.ipynb  rel_finetune_script.py
gliner/: model.py
glirel/: __init__.py  model.py  spacy_integration.py  test_model.py  test_spacy_integration.py
(+25 files in other folders)
