[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["glirel", "glirel.*"]

[tool.setuptools.dynamic]
version = {attr = "glirel.__version__"}

[project]
name = "glirel"
description = "Generalist model for Relation Extraction (Extract any relation types from texts)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = [
    "named-entity-recognition",
    "ner",
    "data-science",
    "natural-language-processing",
    "artificial-intelligence",
    "nlp",
    "machine-learning",
    "transformers"
]
authors = [
    {name = "Jack Boylan"},
    {name = "Urchade Zaratiana"},
    {name = "Nadi Tomeh"},
    {name = "Pierre Holat"},
    {name = "Thierry Charnois"},
]
maintainers = [
    {name = "Jack Boylan"},
]
dependencies = [
    "torch",
    "transformers",
    "huggingface_hub",
    "flair",
    "seqeval",
    "tqdm",
    "datasets",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jackboyla/GLiREL"